# Brick

./: .gitignore  Cargo.toml  README.md  package-lock.json
proc_macs/: Cargo.toml
proc_macs/src/: lib.rs
src/: composites.rs  control.rs  counter.rs  dom_context.rs  elements.rs  example.rs  example_composite.rs  interactor.rs  lib.rs  macros.rs  rendering.rs  state_manager.rs  util.rs  verbose_ex.rs
src/components/: mod.rs
src/controller_system/: mod.rs
src/examples/: counter.rs  double_counter.rs  early_example.rs  example_composite.rs  mod.rs
src/macros/: mod.rs
src/state_mgmt/: bind.rs  bound_state.rs  mediator.rs  mod.rs  observers.rs  react_macros.rs  set_state.rs  state_constructors.rs  state_wrap.rs  subjects.rs
src/state_mgmt/subjects/: bound_state.rs  mod.rs  state.rs
src/util/: mod.rs
src/view_components/: composites.rs  custom.rs  media.rs  mod.rs  spans.rs  text_containers.rs  view_helpers.rs
src/view_components/leafs/: custom.rs  media.rs  mod.rs  spans.rs  text_containers.rs
static/: global.css  index.html
